src/snapshots/random_task__test__build_nested_task_list__works_for_arbitrary_nesting.snap
---
source: src/lib.rs
expression: "build_nested_task_list(input, \" \")"
---
RecursiveTree {
    key: 0,
    value: "",
    children: [
        RecursiveTree {
            key: 0,
            value: "chore",
            children: [
                RecursiveTree {
                    key: 0,
                    value: "clean",
                    children: [
                        RecursiveTree {
                            key: 0,
                            value: "bedroom",
                            children: [],
                        },
                        RecursiveTree {
                            key: 1,
                            value: "kitchen",
                            children: [],
                        },
                    ],
                },
            ],
        },
    ],
}
