src/snapshots/random_task__test__build_nested_task_list__works_for_empty_input.snap
---
source: src/lib.rs
expression: "build_nested_task_list(vec![], \"\")"
---
RecursiveTree {
    key: 0,
    value: "",
    children: [],
}
