src/snapshots/random_task__test__build_nested_task_list__works_for_multiple_nested_sections.snap
---
source: src/lib.rs
expression: "build_nested_task_list(input, \" \")"
---
RecursiveTree {
    key: 0,
    value: "",
    children: [
        RecursiveTree {
            key: 0,
            value: "chore",
            children: [
                RecursiveTree {
                    key: 0,
                    value: "fold",
                    children: [],
                },
                RecursiveTree {
                    key: 1,
                    value: "wash",
                    children: [],
                },
                RecursiveTree {
                    key: 2,
                    value: "clean",
                    children: [],
                },
            ],
        },
        RecursiveTree {
            key: 0,
            value: "fun",
            children: [
                RecursiveTree {
                    key: 0,
                    value: "code",
                    children: [],
                },
            ],
        },
    ],
}
